<resources>
    <string name="app_name">common</string>
    <string name="label_gallery_select_max_size">至多选择%d张</string>
    <string name="NULL_DATA">查询数据为空</string>
    <string name="friend_relation_exit">好友关系已经存在</string>
    <string name="null_user">用户不存在</string>
    <string name="cattle_chat">Cattle Chat</string>
    <string name="null_avatar">头像为空</string>
    <string name="reLoad">重新加载</string>
    <string name="fb_notice">通知</string>
    <string name="fb_topic">话题</string>
    <string name="fb_task">任务</string>
    <string name="fb_time">日程</string>
    <string name="send_info">请输入你想发布的信息</string>
    <string name="add_friend">添加好友</string>
    <string name="add_group">添加群聊</string>
    <string name="add_tag">建立标签</string>
    <string name="add_info">储存信息</string>
    <string name="create_group">创建群聊</string>
    <string name="find_some">添加好友/群/标签</string>
    <string name="title_search">查找</string>
    <string name="cancel">取消</string>
    <string name="add_friend_now">添加</string>
    <string name="btn_send_start">发送消息</string>
    <string name="form_phone_error">电话号码格式错误</string>
    <string name="form_username_error">请输入5-20位除下划线名字</string>
    <string name="form_psd_error">密码要求为6到20位之间</string>
    <string name="NULL_PASSWORD">密码不能为空！</string>
    <string name="data_null">没有数据</string>
</resources>
