<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/lay_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fa_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add"
        app:fabCustomSize="46dp"
        app:borderWidth="0dp"
        app:rippleColor="#33728dff"
        app:elevation="8dp"
        app:pressedTranslationZ="16dp"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/len_85"
        android:layout_marginRight="@dimen/len_15"
        tools:ignore="RtlHardcoded" />

    <View
        android:visibility="gone"
        android:id="@+id/curtain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d2ffffff"/>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_menu"
        android:layout_width="@dimen/len_100"
        android:layout_height="@dimen/len_224"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/len_80"
        android:layout_marginRight="@dimen/len_10"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="@dimen/len_10"
            android:layout_marginRight="@dimen/len_10"
            android:layout_toStartOf="@+id/fb_notice"
            android:layout_toLeftOf="@+id/fb_notice"
            android:text="@string/fb_notice"
            android:textColor="@color/black_alpha_112" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fb_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="46dp"
            android:layout_above="@id/fb_topic"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/len_5"
            android:backgroundTint="#3296FA"
            app:borderWidth="0dp"
            app:elevation="8dp"
            app:pressedTranslationZ="16dp"
            app:rippleColor="#33728dff"
            app:srcCompat="@drawable/fb_notice"
            tools:ignore="MissingConstraints,UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="14dp"
            android:layout_toStartOf="@+id/fb_topic"
            android:layout_toLeftOf="@+id/fb_topic"
            android:text="@string/fb_topic"
            android:textColor="@color/black_alpha_112" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fb_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="46dp"
            android:layout_above="@id/fb_task"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/len_5"
            android:backgroundTint="#3296FA"
            app:borderWidth="0dp"
            app:elevation="8dp"
            app:pressedTranslationZ="16dp"
            app:rippleColor="#33728dff"
            app:srcCompat="@drawable/fb_topic"
            tools:ignore="MissingConstraints,UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/len_130"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="14dp"
            android:layout_toStartOf="@+id/fb_topic"
            android:layout_toLeftOf="@+id/fb_topic"
            android:text="@string/fb_task"
            android:textColor="@color/black_alpha_112" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fb_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="46dp"
            android:layout_above="@id/fb_time"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/len_5"
            app:borderWidth="0dp"
            app:elevation="8dp"
            app:pressedTranslationZ="16dp"
            app:rippleColor="#33728dff"
            android:backgroundTint="#FF943E"
            app:srcCompat="@drawable/fb_flag"
            tools:ignore="MissingConstraints,UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/len_183"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="14dp"
            android:layout_toStartOf="@+id/fb_time"
            android:layout_toLeftOf="@+id/fb_time"
            android:text="@string/fb_time"
            android:textColor="@color/black_alpha_112" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fb_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="46dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/len_5"
            app:borderWidth="0dp"
            app:elevation="8dp"
            app:pressedTranslationZ="16dp"
            app:rippleColor="#33728dff"
            app:srcCompat="@drawable/fb_time"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_55"
        android:layout_gravity="bottom"
        android:layout_marginTop="0dp"
        android:background="@color/colorWhite"
        android:elevation="@dimen/len_4"
        android:outlineProvider="bounds"
        android:translationZ="@dimen/len_8"
        app:itemIconTint="@color/hint"
        app:itemTextColor="@color/text_nav"
        app:menu="@menu/navigation_items"
        tools:targetApi="lollipop"
        tools:visibility="invisible" />


</android.support.design.widget.CoordinatorLayout>